--- a/bumpcall.html
+++ b/bumpcall.html
@@ -235,89 +235,98 @@
             <h2 class="cs_header">Design</h2>
             <div class="cs_content">
                 <div class="cs_content_title">
-                    <h3><b>Initial Concept</b></h3>
+                    <h3><b>Decisions</b></h3>
                 </div>
                 <div class="cs_content_text">
-                    <h4 class="h4sub">Information Architecture</h4>
-                    <p>After deciding on what key features and desirables would be most important to users, I organized an informal list by page to structure the website.</p>
-                    <img class="figma_cs_imgs" src="/images/casestudy_imgs_bucsa/figma_website_outline.png" alt="Information Architecture Drafted on Figma">
-                    <h4 class="h4sub">Low-Fidelity Wireframes</h4>
-                    <p>Time was short and I knew that the development side would take up a lot, so I drew wireframes to guide my designs and visual hierarchy.</p>
-                    <div id="bucsa_lofi">
-                        <img src="/images/casestudy_imgs_bucsa/lofiwireframe1.png" alt="BUCSA website lo-fi wireframes">
-                        <img src="/images/casestudy_imgs_bucsa/lofiwireframe2.png" alt="BUCSA website lo-fi wireframes">
-                    </div>
                     <h4 class="h4sub">Design System</h4>
-                    <p>With a lot of grays and very few hints of red on the original WordPress page, I made sure the brand of the Ambassadors had some flair, so I utilized the contrast between the bright red and smooth black, and added a lot of small accent colors.</p>
-                    <img src="/images/casestudy_imgs_bucsa/figma_stylesheet.png" alt="Website Design System Stylesheet" class="figma_cs_imgs">
+                    <p>Going through the entire Figma design, the first point of discussion was changing the color. With saturated oranges (and blues for a DND view), the color palette needed a makeover.</p>
+                    <br>
+                    <p>Working with orange was new for me and thus, posed a challenge to find tints and tones to compliment it without taking away the striking effect of the orange. <b>Orange is not a very popular color</b>. Orange is exciting, but can be overwhelming. <b>It signifies energy and enthusiasm, and draws attention</b>. As a result, the selection of the secondary and utility colors were chosen to be more muted colors to accentuate the orange.</p>
                 </div>
+            </div>
+            <img src="/images/casestudy_imgs_bump/bump_color_scheme.png" alt="bumpcall new color scheme" class="figma_cs_imgs2">
+            <div class="cs_content">
+                <div class="cs_content_title">
+                </div>
+                <div class="cs_content_text">
+                    <h4 class="h4sub">Landing Screen</h4>
+                    <p>Building off the new color palette, I designed several variations of the default landing screen and the DND landing screen. While the co-founder opted for the orange radial background because of its familiarity, I pushed for neutral tone base colors as the background because of <b>the higher level of contrast between the background and the CTA button — the bump</b>. Unfortunately, that suggestion was not successful.</p>
+                    <br>
+                    <p>The other components of the page were designed with a mind for minimalism, as we wanted users to simply think about bumping into a friend as biggest priority at the time. Experimenting with icons and drop shadows, </p>
+                </div>
+            </div>
+            <div class="cs_overview_img">
+                <img src="/images/casestudy_imgs_bump/bump_landing_screens.png" alt="bumpcall new landing screen iterations" style="display: block; margin-left: auto; margin-right: auto; max-width: 1000px;">
+                <img src="/images/casestudy_imgs_bump/bump_landing_screens_components.png" alt="bumpcall new landing screen component variations" style="display: block; margin-left: auto; margin-right: auto; max-width: 1000px;">
             </div>
             <div class="cs_content">
                 <div class="cs_content_title">
-                    <h3><b>Design Decisions</b></h3>
                 </div>
                 <div class="cs_content_text">
-                    <h4 class="h4sub">Nav & Footer</h4>
-                    <p>These were the two consistent elements recurring on every page. Knowing a lot of students would be viewing on their mobile devices, I made sure to design mobile responsive views.</p>
-                    <div class="griditem twocol">
-                        <div class="colgrid">
-                            <img class="figma_cs_imgs" src="/images/casestudy_imgs_bucsa/bucsa_nav_mobile.png" alt="Mobile Responsive Nav Bar Mockup">
-                            <img class="figma_cs_imgs2" src="/images/casestudy_imgs_bucsa/bucsa_nav.png" alt="Desktop Nav Bar Mockup">
-                            <img class="figma_cs_imgs2" src="/images/casestudy_imgs_bucsa/bucsa_nav_active.png" alt="Mobile Responsive Nav Bar with Active State Mockup">
-                        </div>
-                        <div class="colgrid">
-                            <img class="figma_cs_imgs2" src="/images/casestudy_imgs_bucsa/bucsa_footer.png" alt="Footer Mockup">
-                        </div>
-                    </div>
-                    <h4 class="h4sub">Landing Page</h4>
-                    <p>From previous experience, I learned that a landing page is the biggest bottleneck to retaining a user. As the user scrolls down, the website unfolds the story behind the Ambassadors. From a call for community to personal anecdotes, each section emphasizes a collective mindset using the "Our..." pronoun.</p>
-                </div>
-            </div>
-            <div class="griditem threecol">
-                <img src="/images/casestudy_imgs_bucsa/bucsa_home_hero.png" alt="Landing Home Hero" class="figma_cs_imgs2">
-                <img src="/images/casestudy_imgs_bucsa/bucsa_home_mission.png" alt="Landing Home Mission" class="figma_cs_imgs2">
-                <img src="/images/casestudy_imgs_bucsa/bucsa_home_community.png" alt="Landing Home Community" class="figma_cs_imgs2">
-            </div>
-            <div class="griditem threecol">
-                <img src="/images/casestudy_imgs_bucsa/bucsa_home_clubs.png" alt="Landing Home Clubs"  class="figma_cs_imgs2">
-                <img src="/images/casestudy_imgs_bucsa/bucsa_home_mailing.png" alt="Landing Home Mailing List" class="figma_cs_imgs2">
-            </div>
-            <div class="cs_content">
-                <div class="cs_content_title">
-                    <h3><b></b></h3>
-                </div>
-                <div class="cs_content_text">
-                    <h4 class="h4sub">Consistent Hero Designs</h4>
-                    <p>I'm a proud user of <a href="https://storyset.com/">Storyset</a> graphics. The range of artstyles is very versatile and it adds a lot of flavor to what could simply be an informative hero page. With a relevant graphic to accompany the content, users would find more interest browsing.</p>
-                </div>
-            </div>
-            <div class="griditem threecol">
-                <img src="/images/casestudy_imgs_bucsa/landing_ambassadors.png" alt="Ambassadors Hero Screen" class="figma_cs_imgs2">
-                <img src="/images/casestudy_imgs_bucsa/landing_mentor.png" alt="Mentor Hero Screen" class="figma_cs_imgs2">
-                <img src="/images/casestudy_imgs_bucsa/landing_resources.png" alt="Resources Hero Screen" class="figma_cs_imgs2">
-            </div>
-            <div class="cs_content">
-                <div class="cs_content_title">
-                    <h3><b></b></h3>
-                </div>
-                <div class="cs_content_text">
-                    <h4 class="h4sub">Final Design</h4>
-                    <p>I've never programmed a website from scratch <b>all by myself</b> so as the lone developer, I gave myself a week and a few days to not only implement the technologies, but learn some along the way. Below are the final implementations of each main page (excluding the landing page seen above)!</p>
+                    <h4 class="h4sub">Loading Screens</h4>
+                    <p>Rather than an infinite spinning wheel overlay when clicking the bump button, I designed a series of loading screens that would not only make a wait time more enjoyable, but also <b>prompt the user to think of questions</b> along the way.</p>
                 </div>
             </div>
             <div class="griditem fivecol">
-                <img src="/images/casestudy_imgs_bucsa/bucsa_mentorship.png" alt="Mentorship Full Page" class="figma_cs_imgs2">
-                <img src="/images/casestudy_imgs_bucsa/bucsa_about.png" alt="About Us Full Page" class="figma_cs_imgs2">
-                <img src="/images/casestudy_imgs_bucsa/bucsa_ambassadors.png" alt="Ambassadors Full Page" class="figma_cs_imgs2">
-                <img src="/images/casestudy_imgs_bucsa/bucsa_resources.png" alt="Resources Full Page" class="figma_cs_imgs2">
-                <img src="/images/casestudy_imgs_bucsa/bucsa_contact.png" alt="Contact Us Full Page" class="figma_cs_imgs2">
+                <img src="/images/casestudy_imgs_bump/bump_loading1.png" alt="bumpcall loading screen" class="figma_cs_imgs2">
+                <img src="/images/casestudy_imgs_bump/bump_loading2.png" alt="bumpcall loading screen" class="figma_cs_imgs2">
+                <img src="/images/casestudy_imgs_bump/bump_loading3.png" alt="bumpcall loading screen" class="figma_cs_imgs2">
+                <img src="/images/casestudy_imgs_bump/bump_loading4.png" alt="bumpcall loading screen" class="figma_cs_imgs2">
+                <img src="/images/casestudy_imgs_bump/bump_loading5.png" alt="bumpcall loading screen" class="figma_cs_imgs2">
             </div>
             <div class="cs_content">
                 <div class="cs_content_title">
-                    <h3><b>Demo</b></h3>
                 </div>
                 <div class="cs_content_text">
-                    <iframe class="youtube_vid" width="560" height="315" src="https://www.youtube.com/embed/HP6hkymmq28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p>To add more functionality, a swipe-up menu was added to allow the user to select questions or perhaps come up with their own. If companies were to sponsor this product, they could send in questions of their own.</p>
+                </div>
+            </div>
+            <div class="cs_overview_img">
+                <img src="/images/casestudy_imgs_bump/bump_loading6.png" alt="bumpcall loading screens" style="display: block; margin-left: auto; margin-right: auto; max-width: 600px;">
+            </div>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b></b></h3>
+                </div>
+                <div class="cs_content_text">
+                    <h4 class="h4sub">Video Call Prompts</h4>
+                    <p>After selecting a prompt or writing one, a user can see the selected question at the bottom of the call. Similar to FaceTime, bumpcall offers a familiar video call experience.</p>
+                </div>
+            </div>
+            <div class="cs_overview_img">
+                <img src="/images/casestudy_imgs_bump/bump_video.png" alt="bumpcall video calls" style="display: block; margin-left: auto; margin-right: auto; max-width: 600px;">
+            </div>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b></b></h3>
+                </div>
+                <div class="cs_content_text">
+                    <h4 class="h4sub">Friends List & Muting</h4>
+                    <p>While bumping into friends is fun, users in the focus group found that they bumped into some friends more than others and in some cases, friends that they would like to bump into less. A friends list with muting options allows them to control that more.</p>
+                </div>
+            </div>
+            <div class="cs_overview_img">
+                <img src="/images/casestudy_imgs_bump/bump_friends.png" alt="bumpcall friends list" style="display: block; margin-left: auto; margin-right: auto; max-width: 600px;">
+            </div>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b></b></h3>
+                </div>
+                <div class="cs_content_text">
+                    <h4 class="h4sub">Invite Friends</h4>
+                    <p>Using bumpcall isn't any fun without friends. To make sure users can bump into their friends right away, we suggest they sync their contacts and invite them upon downloading!</p>
+                </div>
+            </div>
+            <div class="cs_overview_img">
+                <img src="/images/casestudy_imgs_bump/bump_invite_friends.png" alt="bumpcall invite and sync contacts" style="display: block; margin-left: auto; margin-right: auto; max-width: 800px;">
+            </div>
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b>Future</b></h3>
+                </div>
+                <div class="cs_content_text">
+                    <h4 class="h4sub">Gamification</h4>
+                    <p>Right before departing bumpcall, another section that was under consideration was a way to gamify the product. I had come up with ideas for badges, points, and rewards but hadn't implemented them by the time I left.</p>
                 </div>
             </div>
         </section>
@@ -329,10 +338,14 @@
                     <h3><b>Conclusions</b></h3>
                 </div>
                 <div class="cs_content_text">
-                    <h4 class="h4sub">Awarded first place!</h4>
-                    <p>This project was certainly a lot different from the ones I tackled before because I had the job of fully designing and developing the product. I learned to value <b>the compromises between ideation and feasible design</b>. While I wish my teammates could put as much effort in as I did, I learned a lot about what I could manage and what I excel at.</p>
+                    <h4 class="h4sub">How about that start-up culture?</h4>
+                    <p>Taking on a role at a start-up was something else. I was a Product/UX Designer, Graphic Designer, Marketer, and more. I made iterations of logos that fell short. I created graphics for the Instagram. I designed wireframe after wireframe. Was it worth it? <b>Absolutely.</b></p>
                     <br>
-                    <p>The next step is to collaborate with the Ambassadors to get the website up and running on their end. It was an absolute pleasure spending countless hours night after night to not only get a finished product turned in, but a clean, polished redesign that accounted for as many factors as possible.</p>
+                    <p>To see your work on your phone screen as an actual part of the product, to see it interact with the user, and to get constructive feedback by other users is nothing short of remarkable. I've gone to my fair share of hackathons and designathons before, but this was a full product, with no 36-hour rush.</p>
+                    <br>
+                    <p>While it was frustrating at first to explain to one of the co-founders why the menu bar among other components couldn't all use glassmorphism or why the orange needed other colors, it was a pleasure building on my experiences both as a designer and as a leader (especially in the last few weeks post-junior spring semester).</p>
+                    <br>
+                    <p>Unfortunately, all things must come to an end and my time with bumpcall was cut short as a result of decision to pursue another internship at BU Spark!</p>
                     <br>
                     <p><b>Thanks for reading!</b></p>
                 </div>
