first two casestudies aos

--- a/bucsambassadors.html
+++ b/bucsambassadors.html
@@ -116,7 +116,7 @@
                 </div>
             </div>
             <div class="cs_overview_img">
-                <img src="/images/casestudy_imgs_bucsa/three_devices.png" alt="BUCSA Redesign Mockups">
+                <img src="/images/casestudy_imgs_bucsa/three_devices.png" alt="BUCSA Redesign Mockups" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
             </div>
         </section>
         <hr>
@@ -133,7 +133,7 @@
                     <p>Unfortunately, both as someone who isn't affiliated with BUCSA and as a UX designer doing their research, there was not too much information to work with.</p>
                 </div>
             </div>
-            <div id="original_wordpress_grid">
+            <div id="original_wordpress_grid" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-bottom">
                 <img src="/images/casestudy_imgs_bucsa/original_wordpress1.png" alt="BUCSA Original WordPress Website Screenshots">
                 <img src="/images/casestudy_imgs_bucsa/original_wordpress2.png" alt="BUCSA Original WordPress Website Screenshots">
                 <img src="/images/casestudy_imgs_bucsa/original_wordpress3.png" alt="BUCSA Original WordPress Website Screenshots">
@@ -192,7 +192,7 @@
         <hr>
         <section class="casestudy_section whiteback">
             <h2 class="cs_header">Personas</h2>
-            <div id="personas_flex">
+            <div id="personas_flex" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 <div class="personas_content">
                     <img src="/images/casestudy_imgs_bucsa/student.png" alt="Boston University Student">
                     <p><b>A BU student interested in joining BUCSA</b></p>
@@ -226,13 +226,13 @@
                     <img class="figma_cs_imgs" src="/images/casestudy_imgs_bucsa/figma_website_outline.png" alt="Information Architecture Drafted on Figma">
                     <h4 class="h4sub">Low-Fidelity Wireframes</h4>
                     <p>Time was short and I knew that the development side would take up a lot, so I drew wireframes to guide my designs and visual hierarchy.</p>
-                    <div id="bucsa_lofi">
+                    <div id="bucsa_lofi" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                         <img src="/images/casestudy_imgs_bucsa/lofiwireframe1.png" alt="BUCSA website lo-fi wireframes">
                         <img src="/images/casestudy_imgs_bucsa/lofiwireframe2.png" alt="BUCSA website lo-fi wireframes">
                     </div>
                     <h4 class="h4sub">Design System</h4>
                     <p>With a lot of grays and very few hints of red on the original WordPress page, I made sure the brand of the Ambassadors had some flair, so I utilized the contrast between the bright red and smooth black, and added a lot of small accent colors.</p>
-                    <img src="/images/casestudy_imgs_bucsa/figma_stylesheet.png" alt="Website Design System Stylesheet" class="figma_cs_imgs">
+                    <img src="/images/casestudy_imgs_bucsa/figma_stylesheet.png" alt="Website Design System Stylesheet" class="figma_cs_imgs" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 </div>
             </div>
             <div class="cs_content">
@@ -242,7 +242,7 @@
                 <div class="cs_content_text">
                     <h4 class="h4sub">Nav & Footer</h4>
                     <p>These were the two consistent elements recurring on every page. Knowing a lot of students would be viewing on their mobile devices, I made sure to design mobile responsive views.</p>
-                    <div class="griditem twocol">
+                    <div class="griditem twocol" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                         <div class="colgrid">
                             <img class="figma_cs_imgs" src="/images/casestudy_imgs_bucsa/bucsa_nav_mobile.png" alt="Mobile Responsive Nav Bar Mockup">
                             <img class="figma_cs_imgs2" src="/images/casestudy_imgs_bucsa/bucsa_nav.png" alt="Desktop Nav Bar Mockup">
@@ -256,12 +256,12 @@
                     <p>From previous experience, I learned that a landing page is the biggest bottleneck to retaining a user. As the user scrolls down, the website unfolds the story behind the Ambassadors. From a call for community to personal anecdotes, each section emphasizes a collective mindset using the "Our..." pronoun.</p>
                 </div>
             </div>
-            <div class="griditem threecol">
+            <div class="griditem threecol" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 <img src="/images/casestudy_imgs_bucsa/bucsa_home_hero.png" alt="Landing Home Hero" class="figma_cs_imgs2">
                 <img src="/images/casestudy_imgs_bucsa/bucsa_home_mission.png" alt="Landing Home Mission" class="figma_cs_imgs2">
                 <img src="/images/casestudy_imgs_bucsa/bucsa_home_community.png" alt="Landing Home Community" class="figma_cs_imgs2">
             </div>
-            <div class="griditem threecol">
+            <div class="griditem threecol" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 <img src="/images/casestudy_imgs_bucsa/bucsa_home_clubs.png" alt="Landing Home Clubs"  class="figma_cs_imgs2">
                 <img src="/images/casestudy_imgs_bucsa/bucsa_home_mailing.png" alt="Landing Home Mailing List" class="figma_cs_imgs2">
             </div>
@@ -274,7 +274,7 @@
                     <p>I'm a proud user of <a href="https://storyset.com/">Storyset</a> graphics. The range of artstyles is very versatile and it adds a lot of flavor to what could simply be an informative hero page. With a relevant graphic to accompany the content, users would find more interest browsing.</p>
                 </div>
             </div>
-            <div class="griditem threecol">
+            <div class="griditem threecol" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 <img src="/images/casestudy_imgs_bucsa/landing_ambassadors.png" alt="Ambassadors Hero Screen" class="figma_cs_imgs2">
                 <img src="/images/casestudy_imgs_bucsa/landing_mentor.png" alt="Mentor Hero Screen" class="figma_cs_imgs2">
                 <img src="/images/casestudy_imgs_bucsa/landing_resources.png" alt="Resources Hero Screen" class="figma_cs_imgs2">
@@ -288,7 +288,7 @@
                     <p>I've never programmed a website from scratch <b>all by myself</b> so as the lone developer, I gave myself a week and a few days to not only implement the technologies, but learn some along the way. Below are the final implementations of each main page (excluding the landing page seen above)!</p>
                 </div>
             </div>
-            <div class="griditem fivecol">
+            <div class="griditem fivecol" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-bottom">
                 <img src="/images/casestudy_imgs_bucsa/bucsa_mentorship.png" alt="Mentorship Full Page" class="figma_cs_imgs2">
                 <img src="/images/casestudy_imgs_bucsa/bucsa_about.png" alt="About Us Full Page" class="figma_cs_imgs2">
                 <img src="/images/casestudy_imgs_bucsa/bucsa_ambassadors.png" alt="Ambassadors Full Page" class="figma_cs_imgs2">
