--- a/bumpcall.html
+++ b/bumpcall.html
@@ -113,7 +113,7 @@
                     <p>With only a few prototyped screens ranging from opening the app to "bumping into someone", my job as an intern was to <b>redesign the entire app</b>. Researching the psychology and cognitive processes of friendships, of reaching out to someone in-person and digitally, and of running into someone, our solution was to bring new life to the product with new colors, new interactions, and new conversations.</p>
                 </div>
             </div>
-            <div class="cs_overview_img">
+            <div class="cs_overview_img" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 <img src="/images/casestudy_imgs_bump/bump_two_screen.png" alt="bumpcall launch and main screen mockups" style="display: block; margin-left: auto; margin-right: auto; max-width: 600px;">
             </div>
         </section>
@@ -146,7 +146,7 @@
                     <h3><b>Past Iterations</b></h3>
                 </div>
             </div>
-            <div class="griditem twocol">
+            <div class="griditem twocol" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 <img class="figma_cs_imgs2" src="/images/casestudy_imgs_bump/bump_old1.png" alt="old bumpcall iterations">
                 <img class="figma_cs_imgs2" src="/images/casestudy_imgs_bump/bump_old2.png" alt="old bumpcall iterations">
             </div>
@@ -206,7 +206,7 @@
         <hr>
         <section class="casestudy_section whiteback">
             <h2 class="cs_header">Personas</h2>
-            <div id="personas_flex">
+            <div id="personas_flex" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 <div class="personas_content">
                     <img src="/images/casestudy_imgs_bump/bump_caller.png" alt="bumpcall user calling">
                     <p><b>A user making the bump</b></p>
@@ -244,7 +244,7 @@
                     <p>Working with orange was new for me and thus, posed a challenge to find tints and tones to compliment it without taking away the striking effect of the orange. <b>Orange is not a very popular color</b>. Orange is exciting, but can be overwhelming. <b>It signifies energy and enthusiasm, and draws attention</b>. As a result, the selection of the secondary and utility colors were chosen to be more muted colors to accentuate the orange.</p>
                 </div>
             </div>
-            <img src="/images/casestudy_imgs_bump/bump_color_scheme.png" alt="bumpcall new color scheme" class="figma_cs_imgs2">
+            <img src="/images/casestudy_imgs_bump/bump_color_scheme.png" alt="bumpcall new color scheme" class="figma_cs_imgs2" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
             <div class="cs_content">
                 <div class="cs_content_title">
                 </div>
@@ -255,7 +255,7 @@
                     <p>The other components of the page were designed with a mind for minimalism, as we wanted users to simply think about bumping into a friend as biggest priority at the time. Experimenting with icons and drop shadows, </p>
                 </div>
             </div>
-            <div class="cs_overview_img">
+            <div class="cs_overview_img" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-bottom">
                 <img src="/images/casestudy_imgs_bump/bump_landing_screens.png" alt="bumpcall new landing screen iterations" style="display: block; margin-left: auto; margin-right: auto; max-width: 1000px;">
                 <img src="/images/casestudy_imgs_bump/bump_landing_screens_components.png" alt="bumpcall new landing screen component variations" style="display: block; margin-left: auto; margin-right: auto; max-width: 1000px;">
             </div>
@@ -267,7 +267,7 @@
                     <p>Rather than an infinite spinning wheel overlay when clicking the bump button, I designed a series of loading screens that would not only make a wait time more enjoyable, but also <b>prompt the user to think of questions</b> along the way.</p>
                 </div>
             </div>
-            <div class="griditem fivecol">
+            <div class="griditem fivecol" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 <img src="/images/casestudy_imgs_bump/bump_loading1.png" alt="bumpcall loading screen" class="figma_cs_imgs2">
                 <img src="/images/casestudy_imgs_bump/bump_loading2.png" alt="bumpcall loading screen" class="figma_cs_imgs2">
                 <img src="/images/casestudy_imgs_bump/bump_loading3.png" alt="bumpcall loading screen" class="figma_cs_imgs2">
@@ -281,7 +281,7 @@
                     <p>To add more functionality, a swipe-up menu was added to allow the user to select questions or perhaps come up with their own. If companies were to sponsor this product, they could send in questions of their own.</p>
                 </div>
             </div>
-            <div class="cs_overview_img">
+            <div class="cs_overview_img" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 <img src="/images/casestudy_imgs_bump/bump_loading6.png" alt="bumpcall loading screens" style="display: block; margin-left: auto; margin-right: auto; max-width: 600px;">
             </div>
             <div class="cs_content">
@@ -293,7 +293,7 @@
                     <p>After selecting a prompt or writing one, a user can see the selected question at the bottom of the call. Similar to FaceTime, bumpcall offers a familiar video call experience.</p>
                 </div>
             </div>
-            <div class="cs_overview_img">
+            <div class="cs_overview_img" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 <img src="/images/casestudy_imgs_bump/bump_video.png" alt="bumpcall video calls" style="display: block; margin-left: auto; margin-right: auto; max-width: 600px;">
             </div>
             <div class="cs_content">
@@ -305,7 +305,7 @@
                     <p>While bumping into friends is fun, users in the focus group found that they bumped into some friends more than others and in some cases, friends that they would like to bump into less. A friends list with muting options allows them to control that more.</p>
                 </div>
             </div>
-            <div class="cs_overview_img">
+            <div class="cs_overview_img" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-bottom">
                 <img src="/images/casestudy_imgs_bump/bump_friends.png" alt="bumpcall friends list" style="display: block; margin-left: auto; margin-right: auto; max-width: 600px;">
             </div>
             <div class="cs_content">
@@ -317,7 +317,7 @@
                     <p>Using bumpcall isn't any fun without friends. To make sure users can bump into their friends right away, we suggest they sync their contacts and invite them upon downloading!</p>
                 </div>
             </div>
-            <div class="cs_overview_img">
+            <div class="cs_overview_img" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                 <img src="/images/casestudy_imgs_bump/bump_invite_friends.png" alt="bumpcall invite and sync contacts" style="display: block; margin-left: auto; margin-right: auto; max-width: 800px;">
             </div>
             <div class="cs_content">
