--- a/bumpcall.html
+++ b/bumpcall.html
@@ -358,14 +358,14 @@
              email: andyvo@bu.edu
              github: andyyvo
              linkedin: andyyvo
-             insta: andyy.vo -->
+             insta: theandyvo -->
         <div class="copyright">
             <h4>Let's have a coffee chat ☕</h4>
             <div class="socials">
                 <a href="mailto:andyvo@bu.edu" class="social_link mail" target="_blank"><i class="fas fa-envelope"></i></a>
                 <a href="https://github.com/andyyvo/" class="social_link github"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/andyyvo/" class="social_link linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://www.instagram.com/andyy.vo/" class="social_link insta" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/theandyvo/" class="social_link insta" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
             <!-- emoji ideas: tree, boba (not on all platforms), guitar, music, cowboy emoji, celebrate confetti popper, nerd emoji, rollerblades, lightbulb, fire -->
             <p class="copyright_text">Designed 🎨 and coded 👨‍💻 by Andy Vo</p>
