update 2.1 - google analytics

--- a/muckrock.html
+++ b/muckrock.html
@@ -7,14 +7,14 @@
     <title>Andy Vo | MuckRock</title>
     <meta name="description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through storytelling.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-199547569-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-199547569-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'UA-199547569-1');
-    </script> -->
+    </script>
     <!-- facebook tags -->
     <meta property="og:title" content="Andy Vo">
     <meta property="og:description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through storytelling.">
