--- a/work.html
+++ b/work.html
@@ -86,7 +86,7 @@
                 <div class="selectedwork work1" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-once="true">
                     <div class="selectedwork_videowrapper">
                         <a href="scdao">
-                            <video class="videoPlayer" src="/videos/scdao_demo.m4v" preload="auto" loop="loop" onmouseover="this.play();" onmouseout="this.pause();this.currentTime=0;"></video>
+                            <video class="videoPlayer" src="/videos/scdao_demo.m4v" preload="auto" loop="loop" playsinline onmouseover="this.play();" onmouseout="this.pause();this.currentTime=0;"></video>
                         </a>
                     </div>
                     <div class="selectedwork_title">
@@ -103,7 +103,7 @@
                 <div class="selectedwork work2" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-once="true">
                     <div class="selectedwork_videowrapper">
                         <a href="muckrock">
-                            <video class="videoPlayer" src="/videos/muckrock_demo.m4v" preload="auto" loop="loop" onmouseover="this.play();" onmouseout="this.pause();this.currentTime=0;"></video>
+                            <video class="videoPlayer" src="/videos/muckrock_demo.m4v" preload="auto" loop="loop" playsinline onmouseover="this.play();" onmouseout="this.pause();this.currentTime=0;"></video>
                         </a>
                     </div>
                     <div class="selectedwork_title">
@@ -120,7 +120,7 @@
                 <div class="selectedwork work3" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-once="true">
                     <div class="selectedwork_videowrapper">
                         <a href="bucsa">
-                            <video class="videoPlayer" src="/videos/bucsa_demo.m4v" preload="auto" loop="loop" onmouseover="this.play();" onmouseout="this.pause();this.currentTime=0;"></video>
+                            <video class="videoPlayer" src="/videos/bucsa_demo.m4v" preload="auto" loop="loop" playsinline onmouseover="this.play();" onmouseout="this.pause();this.currentTime=0;"></video>
                         </a>
                     </div>
                     <div class="selectedwork_title">
@@ -137,7 +137,7 @@
                 <div class="selectedwork work4" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-once="true">
                     <div class="selectedwork_videowrapper">
                         <a href="bumpcall">
-                            <video class="videoPlayer" src="/videos/bump_demo.m4v" preload="auto" loop="loop" onmouseover="this.play();" onmouseout="this.pause();this.currentTime=0;"></video>
+                            <video class="videoPlayer" src="/videos/bump_demo.m4v" preload="auto" loop="loop" playsinline onmouseover="this.play();" onmouseout="this.pause();this.currentTime=0;"></video>
                         </a>
                     </div>
                     <div class="selectedwork_title">
